--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="background_family">#FFF8E1</color>
+    <color name="button_primary">#4CAF50</color>
+    <color name="button_secondary">#FFC107</color>
 </resources>
